updated functions to change the random freelancers and prices

--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script src="index.js"></script>
+ 
 </head>
 <body>
-  
+  <h1>Freelancer Forum</h1>
+  <ul id="squares"></ul>
+
+  Available Freelancers
+  <ul id="squares"></ul>
+  <ul id="circles"></ul>
+  <script src="index.js"></script>
 </body>
 </html>
