Cleaned up syntax copy and formatted code

--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Freelancer Forum</title>
  
 </head>
 <body>
   <h1>Freelancer Forum</h1>
-  <ul id="squares"></ul>
+  <p id="averagePrice"></p>
 
   Available Freelancers
-  <ul id="squares"></ul>
-  <ul id="circles"></ul>
+  <ul id="freelancersList"></ul>
   <script src="index.js"></script>
 </body>
 </html>
